Tabs margin fix and remove scrollbar, Increment package, deploy udpated docs

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -16474,7 +16474,7 @@ component:tabs
 ============================================================================= 
 */
 .tabs {
-  margin: 2rem, 0;
+  margin: 2rem 0;
 }
 .tabs [role=tablist] {
   position: relative;
@@ -16486,6 +16486,11 @@ component:tabs
   overflow-x: auto;
   border-bottom: 1px solid var(--site-color-rule-light);
   border-bottom-width: 1px;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+}
+.tabs [role=tablist]::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 .tabs [role=tab] {
   display: block;
